--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
    <section id="project" class="row g-0 py-0">
        <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-           <img src="img/hero_img.jpg" alt="">
+           <img src="img/p1.png" alt="">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Introduction to Cybersecurity</h3>
@@ -223,16 +223,16 @@
          </div>
       <div class="container">
          <div class="row gy-4">
-            <div class="col-lg-2 col-md-3 col-4">
+            <div class="col-lg-2 col-md-3 col-6">
                <img src="img/logo1.svg" alt="">
             </div>
-            <div class="col-lg-2 col-md-3 col-4">
+            <div class="col-lg-2 col-md-3 col-6">
                <img src="img/logo2.svg" alt="">
             </div>
-            <div class="col-lg-2 col-md-3 col-4">
+            <div class="col-lg-2 col-md-3 col-6">
                <img src="img/logo3.svg" alt="">
             </div>
-            <div class="col-lg-2 col-md-3 col-4">
+            <div class="col-lg-2 col-md-3 col-6">
                <img src="img/logo4.svg" alt="">
             </div>
          </div>
