--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
    <section id="project" class="row g-0 py-0">
        <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-           <img src="img/p1.png" alt="">
+           <a href="https://en.wikipedia.org/wiki/Cat"><img src="img/p1.png" alt=""></a>
                <div class="portfolio-overlay">
                   <div>
                      <h3>Introduction to Cybersecurity</h3>
