--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
        <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
            <img src="img/p1.png" alt="">
-               <a href="https://en.wikipedia.org/wiki/Cat">
+               <a href="learn.html">
                  <div class="portfolio-overlay">
                   <div>
                      <h3>Introduction to Cybersecurity</h3>
