--- a/intro.html
+++ b/intro.html
@@ -57,8 +57,14 @@
          </div>
          <div class="row">
                <div class="col-12 p-4">
-               <h4 class="title-sm mt-4">Introduction</h4>
-               <p>Pertama perlu ke sini, kedua perlu kesini</div>          
+               <h4 class="title-sm mt-4">How to get started?</h4>
+               <p>First thing to learn</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Try CTF</h4>
+               <p>You can try CTF on this and this</p>
+         </div>   
 
    <footer>
       <div class="footer-top">
