--- a/intro.html
+++ b/intro.html
@@ -62,9 +62,29 @@
          </div>
          <div class="row">
                <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Try Tryhackme</h4>
+               <p>You can try CTF on this and this</p>
+         </div>  
+         <div class="row">
+               <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Try CTF</h4>
                <p>You can try CTF on this and this</p>
-         </div>   
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Degree and Certificates</h4>
+               <p>You can try to enroll</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Roadmap</h4>
+               <p>You can try to check which suitable for you</p>
+         </div>  
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Do what you love</h4>
+               <p>You can try CTF on this and this</p>
+         </div>  
 
    <footer>
       <div class="footer-top">
