--- a/intro.html
+++ b/intro.html
@@ -78,8 +78,7 @@
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Roadmap</h4>
-               <p>You can try to check which suitable for you</p>
-               <iframe src="https://github.com/sundowndev/hacker-roadmap" width="100%" height="400" frameborder="0" scrolling="no"></iframe>
+                 <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap"</a></p>
          </div>  
          <div class="row">
                <div class="col-12 p-4">
