--- a/intro.html
+++ b/intro.html
@@ -78,7 +78,7 @@
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Roadmap</h4>
-                 <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap"</a></p>
+                 <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap">hacker roadmap</a></p>
          </div>  
          <div class="row">
                <div class="col-12 p-4">
