--- a/intro.html
+++ b/intro.html
@@ -57,7 +57,7 @@
          </div>
          <div class="row">
                <div class="col-12 p-4">
-               <h4 class="title-sm mt-4">How to get started?</h4>
+               <h4 class="title-sm mt-4">Before you start</h4>
                <p>First thing to learn</p>
          </div>
          <div class="row">
