--- a/intro.html
+++ b/intro.html
@@ -58,32 +58,66 @@
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Before you start</h4>
-               <p>First thing to learn</p>
+               <p>WARNIING: </p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
-               <h4 class="title-sm mt-4">Try Tryhackme</h4>
-               <p>You can try CTF on this and this</p>
+               <h4 class="title-sm mt-4">What is cybersecurity?</h4>
+               <p>lorem ipsum</p>
          </div>  
          <div class="row">
                <div class="col-12 p-4">
-               <h4 class="title-sm mt-4">Try CTF</h4>
-               <p>You can try CTF on this and this</p>
+               <h4 class="title-sm mt-4">What it is for?</h4>
+               <p>lorem ipsum</p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
-               <h4 class="title-sm mt-4">Degree and Certificates</h4>
-               <p>You can try to enroll</p>
+               <h4 class="title-sm mt-4">Why is cybersecurity important?</h4>
+               <p>lorem ipsum</p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
-               <h4 class="title-sm mt-4">Roadmap</h4>
+               <h4 class="title-sm mt-4">What cybersecurity jobs are out there??</h4>
                  <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap">hacker roadmap</a></p>
-         </div>  
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Basic education requirements for cybersecurity jobs</h4>
+               <p>You can try CTF on this and this</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Technical and soft skills to build career in cybersecurity?</h4>
+               <p>Language:</p>
+               <p>Linux</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Choosing a cybersecurity career path in Malaysia from SPM</h4>
+               <p>Education</p>
+               <p>Career</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Certifications in cybersecurity</h4>
+               <p>Language:</p>
+               <p>Linux</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Training Platform</h4>
+               <p>Tryhackme</p>
+               <p>Capture the Flag</p>
+         </div>
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Do what you love</h4>
                <p>You can try CTF on this and this</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">FAQ's</h4>
+               <p>lorem ipsum</p>
          </div>  
 
    <footer>
