--- a/intro.html
+++ b/intro.html
@@ -118,7 +118,8 @@
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">FAQ's</h4>
                <p>lorem ipsum</p>
-         </div>  
+         </div>
+   </section>
 
    <footer>
       <div class="footer-top">
