--- a/intro.html
+++ b/intro.html
@@ -63,7 +63,11 @@
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">What is cybersecurity?</h4>
-               <p>lorem ipsum</p>
+               <p>Cybersecurity refers to the practice of protecting computer systems, networks, and digital data from unauthorized access, theft, damage, or other malicious attacks. It involves a wide range of techniques and strategies designed to safeguard the confidentiality, integrity, and availability of digital assets.
+
+The field of cybersecurity encompasses a broad range of areas, including network security, application security, data security, cloud security, mobile security, and more. Some of the most common cybersecurity measures include firewalls, encryption, intrusion detection and prevention systems, antivirus software, and vulnerability assessments.
+
+Cybersecurity is becoming increasingly important as more and more sensitive information is stored online and as cyber attacks become more sophisticated. It is critical for individuals, businesses, and governments to take proactive steps to protect their digital assets and prevent cyber attacks.</p>
          </div>  
          <div class="row">
                <div class="col-12 p-4">
@@ -73,12 +77,30 @@
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Why is cybersecurity important?</h4>
-               <p>lorem ipsum</p>
+               <p>Cybersecurity is essential for protecting computer systems, networks, and digital data from unauthorized access, theft, damage, or other malicious attacks. The primary goal of cybersecurity is to ensure the confidentiality, integrity, and availability of digital assets.</p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
-               <h4 class="title-sm mt-4">What cybersecurity jobs are out there??</h4>
-                 <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap">hacker roadmap</a></p>
+               <h4 class="title-sm mt-4">What cybersecurity jobs are out there?</h4>
+                 <p>There are many different types of cybersecurity jobs available, depending on your interests and skill set. Here are some of the most common cybersecurity job roles:
+
+Information security analyst: Responsible for identifying security risks, implementing security measures, and monitoring the effectiveness of security systems.
+
+Network security engineer: Designs and implements security measures to protect computer networks from unauthorized access, malware, and other threats.
+
+Penetration tester: Conducts simulated attacks on computer systems to identify vulnerabilities and weaknesses in security systems.
+
+Cybersecurity consultant: Provides expert advice to organizations on cybersecurity best practices and helps them develop and implement effective security strategies.
+
+Cryptographer: Develops and implements cryptographic algorithms and protocols to protect sensitive data and communications.
+
+Incident responder: Responds to cyber attacks and security breaches, and investigates the cause of security incidents.
+
+Security architect: Designs and implements secure systems and networks, and ensures that security measures are integrated into all aspects of an organization's infrastructure.
+
+Security auditor: Conducts security audits to identify vulnerabilities and ensure compliance with industry standards and regulations.
+
+Cybersecurity researcher: Conducts research on emerging threats and develops new security technologies and strategies.</p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
@@ -117,7 +139,7 @@
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">FAQ's</h4>
-               <p>lorem ipsum</p>
+               <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap">hacker roadmap</a></p>
          </div>
    </section>
 
