--- a/intro.html
+++ b/intro.html
@@ -82,25 +82,25 @@ Cybersecurity is becoming increasingly important as more and more sensitive info
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">What cybersecurity jobs are out there?</h4>
-                 <p>There are many different types of cybersecurity jobs available, depending on your interests and skill set. Here are some of the most common cybersecurity job roles:
+                 <p>There are many different types of cybersecurity jobs available, depending on your interests and skill set. Here are some of the most common cybersecurity job roles:</p>
 
-Information security analyst: Responsible for identifying security risks, implementing security measures, and monitoring the effectiveness of security systems.
+                 <p>Information security analyst: Responsible for identifying security risks, implementing security measures, and monitoring the effectiveness of security systems.</p>
 
-Network security engineer: Designs and implements security measures to protect computer networks from unauthorized access, malware, and other threats.
+                 <p>Network security engineer: Designs and implements security measures to protect computer networks from unauthorized access, malware, and other threats.</p>
 
-Penetration tester: Conducts simulated attacks on computer systems to identify vulnerabilities and weaknesses in security systems.
+                 <p>Penetration tester: Conducts simulated attacks on computer systems to identify vulnerabilities and weaknesses in security systems.</p>
 
-Cybersecurity consultant: Provides expert advice to organizations on cybersecurity best practices and helps them develop and implement effective security strategies.
+                 <p>Cybersecurity consultant: Provides expert advice to organizations on cybersecurity best practices and helps them develop and implement effective security strategies.</p>
 
-Cryptographer: Develops and implements cryptographic algorithms and protocols to protect sensitive data and communications.
+                 <p>Cryptographer: Develops and implements cryptographic algorithms and protocols to protect sensitive data and communications.</p>
 
-Incident responder: Responds to cyber attacks and security breaches, and investigates the cause of security incidents.
+                 <p>Incident responder: Responds to cyber attacks and security breaches, and investigates the cause of security incidents.</p>
 
-Security architect: Designs and implements secure systems and networks, and ensures that security measures are integrated into all aspects of an organization's infrastructure.
+                 <p>Security architect: Designs and implements secure systems and networks, and ensures that security measures are integrated into all aspects of an organization's infrastructure.</p>
 
-Security auditor: Conducts security audits to identify vulnerabilities and ensure compliance with industry standards and regulations.
+                 <p>Security auditor: Conducts security audits to identify vulnerabilities and ensure compliance with industry standards and regulations.</p>
 
-Cybersecurity researcher: Conducts research on emerging threats and develops new security technologies and strategies.</p>
+                 <p>Cybersecurity researcher: Conducts research on emerging threats and develops new security technologies and strategies.</p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
