--- a/intro.html
+++ b/intro.html
@@ -72,12 +72,16 @@ Cybersecurity is becoming increasingly important as more and more sensitive info
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">What it is for?</h4>
-               <p>lorem ipsum</p>
+               <p>Cybersecurity is essential for protecting computer systems, networks, and digital data from unauthorized access, theft, damage, or other malicious attacks. The primary goal of cybersecurity is to ensure the confidentiality, integrity, and availability of digital assets.</p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Why is cybersecurity important?</h4>
-               <p>Cybersecurity is essential for protecting computer systems, networks, and digital data from unauthorized access, theft, damage, or other malicious attacks. The primary goal of cybersecurity is to ensure the confidentiality, integrity, and availability of digital assets.</p>
+               <p>Protection of sensitive information</p>
+               <p>Prevention of cyber attacks</p>
+               <p>Compliance with regulations</p>
+               <p>Business continuity</p>
+               <p>Protection of national security</p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
