--- a/intro.html
+++ b/intro.html
@@ -120,8 +120,12 @@ Cybersecurity is becoming increasingly important as more and more sensitive info
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Choosing a cybersecurity career path in Malaysia from SPM</h4>
-               <p>Education</p>
-               <p>Career</p>
+               <p>If you're interested in pursuing a career in cybersecurity in Malaysia after completing your Sijil Pelajaran Malaysia (SPM), there are several paths you can take. Here are some steps you can take to choose a cybersecurity career path in Malaysia:</p>
+               <p>1. Research different cybersecurity job roles: Take the time to explore different job roles in cybersecurity and learn about the skills and qualifications required for each position. This will help you determine which path is best suited for your interests and abilities.</p>
+               <p>2. Pursue relevant education and training: Consider pursuing a degree in computer science or a related field, as well as relevant certifications such as CompTIA Security+, Certified Information Systems Security Professional (CISSP), or Certified Ethical Hacker (CEH). You can also attend cybersecurity training programs and workshops to gain hands-on experience.</p>
+               <p>3. Seek out internships and work experience: Look for internships or entry-level positions in cybersecurity to gain practical experience and develop your skills. Many companies offer internship programs to students and recent graduates, so this can be a great way to get your foot in the door.</p>
+               <p>4. Network with professionals in the field: Attend cybersecurity conferences, seminars, and meetups to connect with professionals in the field and learn about job opportunities. You can also join cybersecurity-related groups and communities online to stay up-to-date on the latest trends and technologies in the field.</p>
+               <p>5. Stay up-to-date with industry trends and developments: Cybersecurity is a constantly evolving field, so it's important to stay up-to-date with the latest trends and technologies. Read industry publications, attend conferences and webinars, and participate in online forums and discussions to stay informed.</p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
