--- a/intro.html
+++ b/intro.html
@@ -1,62 +1,85 @@
-<!-- header navbar -->
-<div id="my-header2"></div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" />
 
-<section id="about">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 section-intro">
-        <h1>Breaking Into Cybersecurity Without Any Experience</h1>
-        <div class="hline"></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12 p-4">
-        <h4 class="title-sm mt-4">Before you start</h4>
-        <p>First thing to learn</p>
-      </div>
-      <div class="row">
-        <div class="col-12 p-4">
-          <h4 class="title-sm mt-4">Try Tryhackme</h4>
-          <p>You can try CTF on this and this</p>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/boxicons.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+
+    <title>Hibiscus Lab</title>
+  </head>
+  <body data-bs-spy="scroll" data-bs-target=".navbar">
+    <!--  -->
+    <!-- header navbar -->
+    <div id="my-header2"></div>
+
+    <!-- Section Intro -->
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 section-intro">
+            <h1>Breaking Into Cybersecurity Without Any Experience</h1>
+            <div class="hline"></div>
+          </div>
         </div>
         <div class="row">
           <div class="col-12 p-4">
-            <h4 class="title-sm mt-4">Try CTF</h4>
-            <p>You can try CTF on this and this</p>
+            <h4 class="title-sm mt-4">Before you start</h4>
+            <p>First thing to learn</p>
           </div>
           <div class="row">
             <div class="col-12 p-4">
-              <h4 class="title-sm mt-4">Degree and Certificates</h4>
-              <p>You can try to enroll</p>
+              <h4 class="title-sm mt-4">Try Tryhackme</h4>
+              <p>You can try CTF on this and this</p>
             </div>
             <div class="row">
               <div class="col-12 p-4">
-                <h4 class="title-sm mt-4">Roadmap</h4>
-                <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap">hacker roadmap</a></p>
+                <h4 class="title-sm mt-4">Try CTF</h4>
+                <p>You can try CTF on this and this</p>
               </div>
               <div class="row">
                 <div class="col-12 p-4">
-                  <h4 class="title-sm mt-4">Do what you love</h4>
-                  <p>You can try CTF on this and this</p>
+                  <h4 class="title-sm mt-4">Degree and Certificates</h4>
+                  <p>You can try to enroll</p>
+                </div>
+                <div class="row">
+                  <div class="col-12 p-4">
+                    <h4 class="title-sm mt-4">Roadmap</h4>
+                    <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap">hacker roadmap</a></p>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 p-4">
+                      <h4 class="title-sm mt-4">Do what you love</h4>
+                      <p>You can try CTF on this and this</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
 
-  <!-- footer -->
-  <div id="my-footer"></div>
-</section>
+      <!-- footer -->
+      <div id="my-footer"></div>
+    </section>
 
-<!-- scipts jquery -->
-<script src="js/jquery.js"></script>
+    <!-- scipts jquery -->
+    <script src="js/jquery.js"></script>
 
-<script>
-  $(document).ready(function () {
-    $('#my-header2').load('layouts/header2.html');
-    $('#my-footer').load('layouts/footer.html');
-  });
-</script>
+    <!-- Optional JavaScript; choose one of the two! -->
+    <script src="js/bootstrap.bundle.min.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $('#my-header2').load('layouts/header2.html');
+        $('#my-footer').load('layouts/footer.html');
+      });
+    </script>
+  </body>
+</html>
