--- a/example.html
+++ b/example.html
@@ -33,6 +33,7 @@
 
     <script>
       $(document).ready(function () {
+        // header ni tengok header mana mau guna
         $('#my-header').load('layouts/header.html');
         $('#my-footer').load('layouts/footer.html');
       });
