--- a/intro.html
+++ b/intro.html
@@ -21,53 +21,107 @@
     <!-- Section Intro -->
     <section id="about">
       <div class="container">
-        <div class="row">
-          <div class="col-12 section-intro">
-            <h1>Breaking Into Cybersecurity Without Any Experience</h1>
-            <div class="hline"></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 p-4">
-            <h4 class="title-sm mt-4">Before you start</h4>
-            <p>First thing to learn</p>
-          </div>
-          <div class="row">
-            <div class="col-12 p-4">
-              <h4 class="title-sm mt-4">Try Tryhackme</h4>
-              <p>You can try CTF on this and this</p>
+         <div class="row">
+            <div class="col-12 section-intro">
+               <h1>Breaking Into Cybersecurity Without Any Experience</h1>
+               <div class="hline"></div>
             </div>
-            <div class="row">
-              <div class="col-12 p-4">
-                <h4 class="title-sm mt-4">Try CTF</h4>
-                <p>You can try CTF on this and this</p>
-              </div>
-              <div class="row">
-                <div class="col-12 p-4">
-                  <h4 class="title-sm mt-4">Degree and Certificates</h4>
-                  <p>You can try to enroll</p>
-                </div>
-                <div class="row">
-                  <div class="col-12 p-4">
-                    <h4 class="title-sm mt-4">Roadmap</h4>
-                    <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap">hacker roadmap</a></p>
-                  </div>
-                  <div class="row">
-                    <div class="col-12 p-4">
-                      <h4 class="title-sm mt-4">Do what you love</h4>
-                      <p>You can try CTF on this and this</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Before you start</h4>
+               <p>WARNIING: </p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">What is cybersecurity?</h4>
+               <p>Cybersecurity refers to the practice of protecting computer systems, networks, and digital data from unauthorized access, theft, damage, or other malicious attacks. It involves a wide range of techniques and strategies designed to safeguard the confidentiality, integrity, and availability of digital assets.
 
-      <!-- footer -->
-      <div id="my-footer"></div>
-    </section>
+The field of cybersecurity encompasses a broad range of areas, including network security, application security, data security, cloud security, mobile security, and more. Some of the most common cybersecurity measures include firewalls, encryption, intrusion detection and prevention systems, antivirus software, and vulnerability assessments.
+
+Cybersecurity is becoming increasingly important as more and more sensitive information is stored online and as cyber attacks become more sophisticated. It is critical for individuals, businesses, and governments to take proactive steps to protect their digital assets and prevent cyber attacks.</p>
+         </div>  
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">What it is for?</h4>
+               <p>Cybersecurity is essential for protecting computer systems, networks, and digital data from unauthorized access, theft, damage, or other malicious attacks. The primary goal of cybersecurity is to ensure the confidentiality, integrity, and availability of digital assets.</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Why is cybersecurity important?</h4>
+               <p>Protection of sensitive information</p>
+               <p>Prevention of cyber attacks</p>
+               <p>Compliance with regulations</p>
+               <p>Business continuity</p>
+               <p>Protection of national security</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">What cybersecurity jobs are out there?</h4>
+                 <p>There are many different types of cybersecurity jobs available, depending on your interests and skill set. Here are some of the most common cybersecurity job roles:</p>
+
+                 <p>Information security analyst: Responsible for identifying security risks, implementing security measures, and monitoring the effectiveness of security systems.</p>
+
+                 <p>Network security engineer: Designs and implements security measures to protect computer networks from unauthorized access, malware, and other threats.</p>
+
+                 <p>Penetration tester: Conducts simulated attacks on computer systems to identify vulnerabilities and weaknesses in security systems.</p>
+
+                 <p>Cybersecurity consultant: Provides expert advice to organizations on cybersecurity best practices and helps them develop and implement effective security strategies.</p>
+
+                 <p>Cryptographer: Develops and implements cryptographic algorithms and protocols to protect sensitive data and communications.</p>
+
+                 <p>Incident responder: Responds to cyber attacks and security breaches, and investigates the cause of security incidents.</p>
+
+                 <p>Security architect: Designs and implements secure systems and networks, and ensures that security measures are integrated into all aspects of an organization's infrastructure.</p>
+
+                 <p>Security auditor: Conducts security audits to identify vulnerabilities and ensure compliance with industry standards and regulations.</p>
+
+                 <p>Cybersecurity researcher: Conducts research on emerging threats and develops new security technologies and strategies.</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Basic education requirements for cybersecurity jobs</h4>
+               <p>You can try CTF on this and this</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Technical and soft skills to build career in cybersecurity?</h4>
+               <p>Language:</p>
+               <p>Linux</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Choosing a cybersecurity career path in Malaysia from SPM</h4>
+               <p>If you're interested in pursuing a career in cybersecurity in Malaysia after completing your Sijil Pelajaran Malaysia (SPM), there are several paths you can take. Here are some steps you can take to choose a cybersecurity career path in Malaysia:</p>
+               <p>1. Research different cybersecurity job roles: Take the time to explore different job roles in cybersecurity and learn about the skills and qualifications required for each position. This will help you determine which path is best suited for your interests and abilities.</p>
+               <p>2. Pursue relevant education and training: Consider pursuing a degree in computer science or a related field, as well as relevant certifications such as CompTIA Security+, Certified Information Systems Security Professional (CISSP), or Certified Ethical Hacker (CEH). You can also attend cybersecurity training programs and workshops to gain hands-on experience.</p>
+               <p>3. Seek out internships and work experience: Look for internships or entry-level positions in cybersecurity to gain practical experience and develop your skills. Many companies offer internship programs to students and recent graduates, so this can be a great way to get your foot in the door.</p>
+               <p>4. Network with professionals in the field: Attend cybersecurity conferences, seminars, and meetups to connect with professionals in the field and learn about job opportunities. You can also join cybersecurity-related groups and communities online to stay up-to-date on the latest trends and technologies in the field.</p>
+               <p>5. Stay up-to-date with industry trends and developments: Cybersecurity is a constantly evolving field, so it's important to stay up-to-date with the latest trends and technologies. Read industry publications, attend conferences and webinars, and participate in online forums and discussions to stay informed.</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Certifications in cybersecurity</h4>
+               <p>Language:</p>
+               <p>Linux</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Training Platform</h4>
+               <p>Tryhackme</p>
+               <p>Capture the Flag</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">Do what you love</h4>
+               <p>You can try CTF on this and this</p>
+         </div>
+         <div class="row">
+               <div class="col-12 p-4">
+               <h4 class="title-sm mt-4">FAQ's</h4>
+               <p>You can try to check <a href="https://github.com/sundowndev/hacker-roadmap">hacker roadmap</a></p>
+         </div>
+   </section>
 
     <!-- scipts jquery -->
     <script src="js/jquery.js"></script>
