--- a/intro.html
+++ b/intro.html
@@ -130,8 +130,13 @@ Cybersecurity is becoming increasingly important as more and more sensitive info
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Certifications in cybersecurity</h4>
-               <p>Language:</p>
-               <p>Linux</p>
+               <p>Certification in cybersecurity is a process of obtaining a credential that validates an individual's knowledge, skills, and abilities in the field of cybersecurity. These certifications are typically earned by passing an examination that covers various topics related to cybersecurity, and they are offered by various organizations and associations. Earning a cybersecurity certification can help validate your knowledge and skills in the field, and it can also enhance your career prospects by demonstrating your commitment to the profession.</p>
+               <p>Some of the most popular cybersecurity certifications include:</p>
+               <p>Certified Information Systems Security Professional (CISSP) - Offered by the International Information System Security Certification Consortium (ISC)², this certification is designed for experienced professionals who have a wide range of knowledge in security-related domains.</p>
+               <p>CompTIA Security+ - Offered by the Computing Technology Industry Association (CompTIA), this certification is an entry-level certification that covers foundational cybersecurity concepts and skills.</p>
+               <p>Certified Ethical Hacker (CEH) - Offered by the International Council of E-Commerce Consultants (EC-Council), this certification is designed for professionals who want to learn how to identify and exploit vulnerabilities in computer systems in an ethical manner.</p>
+               <p>Certified Information Security Manager (CISM) - Offered by ISACA, this certification is designed for professionals who are responsible for managing, designing, and assessing an organization's information security program.</p>
+               <p>GIAC Security Essentials (GSEC) - Offered by the Global Information Assurance Certification (GIAC), this certification covers a wide range of cybersecurity topics, including networking, operating systems, and cryptography.</p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
