--- a/intro.html
+++ b/intro.html
@@ -141,6 +141,7 @@ Cybersecurity is becoming increasingly important as more and more sensitive info
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Training Platform</h4>
+               <p>There are many training platforms available for beginners in cybersecurity. When choosing a training platform, it's important to consider your learning style, budget, and career goals. Some platforms offer free courses, while others charge a fee. Additionally, some platforms offer certification programs, which can be valuable for advancing your career in cybersecurity.</p>
                <p>Tryhackme</p>
                <p>Capture the Flag</p>
          </div>
