--- a/intro.html
+++ b/intro.html
@@ -148,7 +148,12 @@ Cybersecurity is becoming increasingly important as more and more sensitive info
          <div class="row">
                <div class="col-12 p-4">
                <h4 class="title-sm mt-4">Do what you love</h4>
-               <p>You can try CTF on this and this</p>
+               <p>You can find a career path within cybersecurity that aligns with your interests and passions, and build a fulfilling and rewarding career in the field. Remember to keep an open mind and be willing to learn and grow as you pursue your passion in cybersecurity.</p>
+               <p>Identify your interests: Take some time to think about what aspects of cybersecurity interest you the most. Do you enjoy coding and programming? Are you interested in digital forensics? Do you have a passion for ethical hacking? Once you identify your interests, you can start to explore them further.</p>
+               <p>Research different cybersecurity roles: There are many different roles within cybersecurity, including cybersecurity analyst, network security engineer, digital forensics specialist, and more. Research these different roles to see which ones align with your interests and skills.</p>
+               <p>Gain hands-on experience: One of the best ways to determine if you love something is to try it out yourself. Seek out internships, volunteer opportunities, or entry-level positions in cybersecurity to gain hands-on experience and explore different aspects of the field.</p>
+               <p>Pursue relevant education and training: Consider pursuing a degree in computer science or a related field, as well as relevant certifications and training programs. These can help you gain the skills and knowledge needed to pursue your interests within cybersecurity.</p>
+               <p>Network with professionals in the field: Attend cybersecurity conferences, seminars, and meetups to connect with professionals in the field and learn about job opportunities. You can also join cybersecurity-related groups and communities online to stay up-to-date on the latest trends and technologies in the field.</p>
          </div>
          <div class="row">
                <div class="col-12 p-4">
