--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
    <section id="project" class="row g-0 py-0">
        <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-           <img src="img/p1.png" alt="">
+           <img src="img/intro.png" alt="">
                <a href="intro.html">
                  <div class="portfolio-overlay">
                   <div>
