--- a/about.html
+++ b/about.html
@@ -291,17 +291,17 @@ Our hope to use this critical moment in history to strengthen collaboration and 
                <div class="col-md-2">
                   <h5 class="title-sm">Navigation</h5>
                   <div class="footer-links">
-                     <a href="#">Services</a>
-                     <a href="#">Our Work</a>
-                     <a href="#">Team</a>
+                     <a href="about.html">About Us</a>
+                     <a href="#project">Project</a>
+                     <a href="#roadmap">Roadmap</a>
+                     <a href="#partners">Partners</a>
+                     <a href="#contact">Contact Us</a>
                   </div>
                </div>
                <div class="col-md-2">
                   <h5 class="title-sm">More</h5>
                   <div class="footer-links">
-                     <a href="#">FAQ's</a>
                      <a href="#">Privacy & Policy</a>
-                     <a href="#">Liscences</a>
                   </div>
                </div>
                <div class="col-md-2">
