--- a/intro.html
+++ b/intro.html
@@ -171,7 +171,7 @@ Cybersecurity is becoming increasingly important as more and more sensitive info
                   <p>SSM ID: 123456789</p>
                   <div class="social-icons">
                      <a href="https://www.facebook.com/profile.php?id=100084760095342"><i class="bx bxl-facebook"></i></a>
-                     <a href="#"><i class="bx bxl-twitter"></i></a>
+                     <a href="https://twitter.com/HibiscusLab"><i class="bx bxl-twitter"></i></a>
                      <a href="https://www.instagram.com/hibiscuslab/"><i class="bx bxl-instagram"></i></a>
                      <a href="https://t.me/hibiscuslabcommunity"><i class="bx bxl-telegram"></i></a>
                      <a href="https://discord.gg/3aRqb9cH"><i class="bx bxl-discord"></i></a>
