--- a/intro.html
+++ b/intro.html
@@ -193,7 +193,7 @@ Cybersecurity is becoming increasingly important as more and more sensitive info
                <div class="col-md-2">
                   <h5 class="title-sm">More</h5>
                   <div class="footer-links">
-                     <a href="#">Privacy & Policy</a>
+                     <a href="whistleblowing_policy.html">Whistleblowing Policy</a>
                   </div>
                </div>
                <div class="col-md-2">
