--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                <div class="col-md-2">
                   <h5 class="title-sm">More</h5>
                   <div class="footer-links">
-                     <a href="#">Whistleblowing Policy</a>
+                     <a href="whistleblowing_policy.html">Whistleblowing Policy</a>
                   </div>
                </div>
                <div class="col-md-2">
