--- a/about.html
+++ b/about.html
@@ -301,7 +301,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
                <div class="col-md-2">
                   <h5 class="title-sm">More</h5>
                   <div class="footer-links">
-                     <a href="#">Whistleblowing Policy</a>
+                     <a href="whistleblowing_policy.html">Whistleblowing Policy</a>
                   </div>
                </div>
                <div class="col-md-2">
