--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
                <img src="img/p1.png" alt="">
+               <a href="intermediate.html">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Jom Belajar Hack (Intermediate)</h3>
