--- a/intermediate.html
+++ b/intermediate.html
@@ -51,7 +51,7 @@
       <div class="container">
          <div class="row">
             <div class="col-12 section-intro">
-               <h1>Breaking Into Cybersecurity Without Any Experience</h1>
+               <h1>Jom Belajar Hack (Intermediate)</h1>
                <div class="hline"></div>
             </div>
          </div>
