--- a/intermediate.html
+++ b/intermediate.html
@@ -12,6 +12,25 @@
     <link rel="stylesheet" href="css/boxicons.min.css">
     <link rel="stylesheet" href="css/style.css">
     
+     <!-- CSS for Tables -->
+    <style>
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+     }
+
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+     }
+
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
+    </style>
+    
 
     <title>Hibiscus Lab</title>
   </head>
