--- a/intermediate.html
+++ b/intermediate.html
@@ -66,7 +66,7 @@
       </div>
     </nav>
 
- <section id="about">
+  <section id="about">
       <div class="container">
          <div class="row">
             <div class="col-12 section-intro">
@@ -74,26 +74,26 @@
                <div class="hline"></div>
             </div>
          </div>
-        <h1>About</h1>
+        <h2>Overview</h2>
         <p>Penetration testing, also known as Pen Test, is the most common technique for testing the security of web applications. Web Application Penetration Testing involves simulating internal or external unauthorised attacks to gain access to sensitive data. With a weekly intensive online workshop, we will go from I don't even know how to install it to actually understanding web application pentest. You will study and practise Web Pentest across multiple modules. Using Portswigger and bWapp labs, we will conduct live pentests and provide step-by-step instruction.</p>
         
-        <h1 id="workshop-tentative-schedule">Workshop Tentative Schedule</h1>
+        <h2 id="workshop-tentative-schedule">Workshop Tentative Schedule</h2>
         <p>The following links is used as schedule for the workshop.</p>
-        <h2 id="week-1">Week 1</h2>
-<table>
-  <tr>
-    <th>Time</th>
-    <th>Activity</th>
-    <th>Credit Hour</th>
-    <th>Speaker</th>
-  </tr>
-  <tr>
-    <td>09:00 - 11:00</td>
-    <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">Recap Previous Workshop</a></td>
-    <td>2</td>
-    <td>Irfan</td>
-  </tr>
-</table>
+        <h3 id="week-1">Week 3</h2>
+          <table>
+            <tr>
+             <th>Time</th>
+             <th>Activity</th>
+             <th>Credit Hour</th>
+             <th>Speaker</th>
+           </tr>
+           <tr>
+             <td>09:00 - 11:00</td>
+             <td><a href="https://github.com/g3nj1z/Jom-Belajar-Hack-Beginner">Recap Previous Workshop</a></td>
+             <td>2</td>
+             <td>Irfan</td>
+           </tr>
+        </table>
 
    </section>
 
