--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
        <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
            <img src="img/intro.png" alt="">
-               <a href="intro.html">
+               <a href="Project/intro.html">
                  <div class="portfolio-overlay">
                   <div>
                      <h3>Breaking Into Cybersecurity Without Any Experience</h3>
@@ -76,7 +76,7 @@
       <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
                <img src="img/p1.png" alt="">
-               <a href="intermediate.html">
+               <a href="Project/intermediate.html">
                <div class="portfolio-overlay">
                   <div>
                      <h3>Jom Belajar Hack (Intermediate)</h3>
