--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             <h5 class="title-sm mt-3 mb-0 text-white">Muhammad Abrar</h5>
             <small class="text-white">Administrator</small>
             <div class="hline"></div>
-            <p class="text-white">Part of our managing department</p>
+            <p class="text-white">Abrar support the smooth running of offices by carrying out clerical tasks and projects.</p>
          </div>
       </div>
            
@@ -210,7 +210,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             <h5 class="title-sm mt-3 mb-0 text-white">Yasmin Anisah</h5>
             <small class="text-white">Director of Tutoring</small>
             <div class="hline"></div>
-            <p class="text-white">Yasmin oversee interdepartmental tutoring through meetings and regular communication among faculty and staff./p>
+            <p class="text-white">Yasmin oversee interdepartmental tutoring through meetings and regular communication among faculty and staff.</p>
          </div>
       </div>  
            
