--- a/about.html
+++ b/about.html
@@ -332,7 +332,7 @@ Our hope to use this critical moment in history to strengthen collaboration and 
                   <h5 class="title-sm">Contact Us</h5>
                   <div class="footer-links">
                      <p class="mb">Visit Us: Creative Industry Development Centre Level 16, UNIKL Campus City</p>
-                     <p class="mb"><a href = "mailto: hello@biscus.my">hello@biscus.my</a></p>
+                     <p class="mb">Send Email: <a href = "mailto: hello@biscus.my">hello@biscus.my</a></p>
                   </div>
                </div>
             </div>
