--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -224,7 +224,7 @@
                   <h5 class="title-sm">Contact Us</h5>
                   <div class="footer-links">
                      <p class="mb">Visit Us: Creative Industry Development Centre Level 16, UNIKL Campus City</p>
-                     <p class="mb">Send Email: hello@biscus.my</p>
+                     <p class="mb">Send Email: <a href = "mailto: hello@biscus.my">hello@biscus.my</a></p>
                   </div>
                </div>
             </div>
