--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                   </div>
                </div>
                <div class="col-md-2">
-                  <h5 class="title-sm">Contact Us</h5>
+                  <h5 class="title-sm">Reach Out</h5>
                   <div class="footer-links">
                      <p class="mb">Visit Us: Creative Industry Development Centre Level 16, UNIKL Campus City</p>
                      <p class="mb">Send Email: <a href = "mailto: hello@biscus.my">hello@biscus.my</a></p>
