--- a/about.html
+++ b/about.html
@@ -293,6 +293,26 @@ Our hope to use this critical moment in history to strengthen collaboration and 
             <p class="text-white">Afiq manage editorial contents and coordinate delivery of video assets</p>
          </div>
       </div>
+           
+          <!-- Adin -->
+           
+      <div class="col-lg-3 col-sm-6 team-member">
+         <div class="team-member-img">
+            <img src="img/team10.jpeg" alt="">
+            <div class="social-icons">
+               <a href="#"><i class="bx bxl-facebook"></i></a>
+               <a href="#"><i class="bx bxl-twitter"></i></a>
+               <a href="#"><i class="bx bxl-instagram"></i></a>
+               <a href="#"><i class="bx bxl-github"></i></a>
+            </div>
+         </div>
+         <div class="p-4">
+            <h5 class="title-sm mt-3 mb-0 text-white">Aizuddin</h5>
+            <small class="text-white">Web Developer</small>
+            <div class="hline"></div>
+            <p class="text-white">Aizuddin handle the technical aspects of a website, including its performance and capacity.</p>
+         </div>
+      </div>
 
    <footer>
       <div class="footer-top">
