--- a/Project/intro.html
+++ b/Project/intro.html
@@ -51,7 +51,7 @@
          <div class="row">
          <div class="col-12 p-4">
             <h4 class="title-sm mt-4">Before you start</h4>
-            <p>WARNIING: </p>
+            <p>WARNIING: we don't take responsibilities if anything happen</p>
             <p>If you're new to information security, forget everything you know about hacking</p>
             <p>Dont start using tools without reading about pen testing and how it works</p>
             <p>Don't download or use tools if you haven't audited its code</p>
