--- a/Project/intro.html
+++ b/Project/intro.html
@@ -55,6 +55,10 @@
             <p>If you're new to information security, forget everything you know about hacking</p>
             <p>Dont start using tools without reading about pen testing and how it works</p>
             <p>Don't download or use tools if you haven't audited its code</p>
+            <p>Don't use these tools to do stupid things without consent on your friends or worst, your recruiter</p>
+            <p>Read books, manuals, articles, be curious and not just a <a href="https://en.wikipedia.org/wiki/Script_kiddie">script kiddie</a>.</p>
+            <p>I wish you don't use these tools for illegal purposes, but if you do, I hope you know what you're doing</p>
+            <p>Practice using chalenges, not real targets!</p>
          </div>
          <div class="row">
          <div class="col-12 p-4">
